--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,14 @@ android {
     }
 }
 
+repositories {
+    // For fetching from Maven
+    mavenCentral()
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.0.0'
+    compile 'org.jsoup:jsoup:1.8.3'
 }
