Add LogActivity and EamPortal

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.0.0'
+    // jsoup needs to be fetched from Maven
     compile 'org.jsoup:jsoup:1.8.3'
 }
