--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,8 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.0.0'
     // jsoup needs to be fetched from Maven
+    compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'org.jsoup:jsoup:1.8.3'
+    compile 'com.android.support:design:23.1.1'
 }
